--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
-theme: just-the-docs
-
+title: Sako 23 reference
+description: Reference for the Sako 23 programming language
 url: https://aleshkev.github.io/sako
+
+remote_theme: just-the-docs/just-the-docs
+search_enabled: true
+color_scheme: light
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
