--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+# Github Pages config
+
 title: Sako 23 reference
 description: Reference for the Sako 23 programming language
 url: https://aleshkev.github.io/sako
